GNOME Bugzilla – Bug 641979
Visual glitch on workspace selector closing overview mode
Last modified: 2011-02-12 23:27:21 UTC
Closing the overview mode, the worspace selector on right edge gracefully fade out. Workspace previews inside it, instead, disappear after a short lag, with no fade. Best way to see this (unless hardware relatet) is look the right edge while cycling on overview mode (activate, deactivate, activate, deactivate...)
Created attachment 180748 [details] [review] MetaBackgroundActor: Handle paint opacity We were ignoring the opacity set on the background actor, causing problems, e.g., when fading out the workspace thumbnails in GNOME Shell.
Review of attachment 180748 [details] [review]: Looks good.
Attachment 180748 [details] pushed as 735c33b - MetaBackgroundActor: Handle paint opacity